--- a/src/app/project-component/project-component.component.html
+++ b/src/app/project-component/project-component.component.html
@@ -7,10 +7,10 @@
                 <span class="p-1 mt-2"></span>
             </a>
             <div class="d-flex">
-                <p class="my-2">Welcome {{ userName }}</p>
+                <p class="my-2">Welcome {{ userName }},</p>
                 <a>
-                    <button class="btn btn-outline-secondary ms-2" (click)="logout()">
-                        <i class="bi bi-box-arrow-right"></i> Logout
+                    <button class="btn btn-outline-secondary ms-2 border-0" (click)="logout()">
+                        <i class="bi bi-power"></i> Logout
                     </button>
                 </a>
             </div>
@@ -53,12 +53,12 @@
                                 <div class="col-md-3">
                                     <label class="form-label">Start Date</label>
                                     <input required type="date" class="form-control" [(ngModel)]="project.startDate"
-                                        name="startDate" required />
+                                        name="startDate" required id="startDate" />
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label">End Date</label>
                                     <input required type="date" class="form-control" [(ngModel)]="project.endDate"
-                                        name="endDate" required />
+                                        name="endDate" required id="endDate" />
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label">Team Members</label>
@@ -66,9 +66,9 @@
                                         name="teamMembers" required />
                                 </div>
                                 <div class="col-md-3">
-                                    <label class="form-label">Due Date</label>
+                                    <label class="form-label">Due In (Days)</label>
                                     <input required type="date" class="form-control" [(ngModel)]="project.dueDate"
-                                        name="dueDate" required />
+                                        name="dueDate" required id="dueDate" />
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -96,7 +96,7 @@
                                         name="timeSpent" required />
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Create Project</button>
+                            <button type="submit" class="btn btn-outline-dark">Create Project</button>
                         </form>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered">
                         <thead class="thead-light">
-                            <tr>
+                            <tr class="">
                                 <th>Sr.No</th>
                                 <th>Title</th>
                                 <th>Created By</th>
@@ -124,7 +124,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let project of projects let i=index">
+                            <tr *ngFor="let project of projects; let i=index" (click)="navigateToTaskComponent(project)"
+                                class="">
                                 <td>{{ i+1}}</td>
                                 <td>{{ project.title }}</td>
                                 <td>{{ project.createdBy }}</td>
@@ -143,6 +144,8 @@
                 </div>
             </div>
         </div>
+
+
     </div>
 
     <!-- Footer -->
