--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,9 @@
                         <input type="text" id="pp" name="userPassword" class="form-control"
                             [(ngModel)]="login.user_password" required>
                     </div>
-                    <button type="button" class="btn btn-primary w-100" (click)="save_login()">Login</button>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-primary w-75" (click)="save_login()">Login</button>
+                    </div>
                 </form>
                 <p class="text-center mt-3">Don't have an account? <a href="#" (click)="toggleForm()">Sign Up</a></p>
             </div>
@@ -34,7 +36,9 @@
                         <input type="text" id="qq" name="signUpPassword" class="form-control"
                             [(ngModel)]="signup.user_password" required>
                     </div>
-                    <button type="button" class="btn btn-primary w-100" (click)="save_signUp()">Sign Up</button>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-primary w-75" (click)="save_signUp()">Sign Up</button>
+                    </div>
                 </form>
                 <p class="text-center mt-3">Already have an account? <a href="#" (click)="toggleForm()">Login</a></p>
             </div>
