--- a/src/app/project-component/project-component.component.html
+++ b/src/app/project-component/project-component.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid p-0">
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow" style="height: 50px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top" style="height: 50px;">
         <div class="container-fluid p-0">
-            <a class="navbar-brand p-1" href="#">
+            <a class="navbar-brand p-1" routerLink="/project-comp">
                 <img src="tasklogo.png" alt="Logo" width="55" height="50" class="d-inline-block align-text-top ">
                 <span class="p-1 mt-2"></span>
             </a>
@@ -18,12 +18,12 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container mt-4 p-5">
+    <div class="container mt-5 p-5">
         <div class="row">
             <div class="col-md-12 mb-4">
                 <div class="card shadow">
                     <div class="card-header">
-                        <h3 class="card-title">Create Project</h3>
+                        <h4 class="card-title">Create Project</h4>
                     </div>
                     <div class="card-body">
                         <form (ngSubmit)="onSubmit()">
@@ -40,8 +40,8 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label">Created By</label>
-                                    <input required type="text" class="form-control" [(ngModel)]="project.createdBy"
-                                        name="createdBy" required />
+                                    <input type="text" class="form-control" [value]="userName" name="createdBy" required
+                                        readonly />
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label">Project Manager</label>
@@ -60,22 +60,42 @@
                                     <input required type="date" class="form-control" [(ngModel)]="project.endDate"
                                         name="endDate" required id="endDate" />
                                 </div>
+
                                 <div class="col-md-3">
                                     <label class="form-label">Team Members</label>
-                                    <input required type="text" class="form-control" [(ngModel)]="project.teamMembers"
-                                        name="teamMembers" required />
+                                    <div class="input-group">
+                                        <div class="dropdown w-100 ">
+                                            <button class="btn dropdown-toggle border border-grey w-100 text-start"
+                                                type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                Select Team Members
+                                            </button>
+                                            <ul class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton"
+                                                style="padding: 10px; max-height: 200px; overflow-y: auto;">
+                                                <li class="d-flex align-items-center"
+                                                    *ngFor="let member of teamMembers">
+                                                    <input type="checkbox" [id]="member" [value]="member"
+                                                        (change)="onCheckboxChange($event)"
+                                                        [checked]="project.teamMembers.includes(member)" class="me-2">
+                                                    <label [for]="member">{{ member }}</label>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
+
+
                                 <div class="col-md-3">
                                     <label class="form-label">Due In (Days)</label>
-                                    <input required type="date" class="form-control" [(ngModel)]="project.dueDate"
-                                        name="dueDate" required id="dueDate" />
+                                    <input required type="number" class="form-control" [(ngModel)]="project.dueDate"
+                                        name="dueDate" required id="dueDate" readonly />
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md-3">
                                     <label class="form-label">Status</label>
                                     <select class="form-select" [(ngModel)]="project.status" name="status" required>
-                                        <option value="Pending">Pending</option>
+                                        <option value="New">New</option>
                                         <option value="In Progress">In Progress</option>
                                         <option value="Completed">Completed</option>
                                     </select>
@@ -86,14 +106,14 @@
                                         name="assignedTo" required />
                                 </div>
                                 <div class="col-md-3">
-                                    <label class="form-label">Estimate</label>
-                                    <input required type="text" class="form-control" [(ngModel)]="project.estimate"
-                                        name="estimate" required />
+                                    <label class="form-label">Estimate (hours)</label>
+                                    <input required type="number" class="form-control" [(ngModel)]="project.estimate"
+                                        name="estimate" min="0" max="" required />
                                 </div>
                                 <div class="col-md-3">
-                                    <label class="form-label">Time Spent</label>
-                                    <input required type="text" class="form-control" [(ngModel)]="project.timeSpent"
-                                        name="timeSpent" required />
+                                    <label class="form-label">Time Spent (hours)</label>
+                                    <input required type="number" class="form-control" [(ngModel)]="project.timeSpent"
+                                        name="timeSpent" min="0" max="" required />
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-outline-dark">Create Project</button>
@@ -104,52 +124,114 @@
         </div>
         <div class="row mt-4">
             <div class="col-md-12">
-                <h3>Project List</h3>
+                <!-- <h4 class="ms-2">Project List</h4> -->
+                <!-- <div class="">
+                    <div class="pb-1 d-flex align-items-center">
+                        <div class="input-group w-25">
+                            <input type="search" class="form-control w-25" placeholder="Search..." aria-label="Search">
+                            <button class="btn border border-grey" type="button">
+                                <i class="bi bi-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="d-flex justify-content-between align-items-center">
+                    <!-- Search Box -->
+                    <div class="pb-1 d-flex align-items-center">
+                        <div class="input-group w-100">
+                            <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                            <button class="btn border border-grey" type="button">
+                                <i class="bi bi-search"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Sort Button -->
+                    <div class="pb-1">
+                        <button class="btn border border-grey" type="button">
+                            <i class="bi bi-funnel"></i>
+                        </button>
+                    </div>
+                </div>
+
+
+
+
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered">
                         <thead class="thead-light">
                             <tr class="">
-                                <th>Sr.No</th>
+                                <!-- <th>Sr.No</th> -->
                                 <th>Title</th>
                                 <th>Created By</th>
                                 <th>Project Manager</th>
                                 <th>Start Date</th>
-                                <th>End Date</th>
+                                <!-- <th>End Date</th> -->
+                                <th>Due In (Days)</th>
                                 <th>Team Members</th>
-                                <th>Due Date</th>
                                 <th>Status</th>
-                                <th>Assigned To</th>
-                                <th>Estimate</th>
-                                <th>Time Spent</th>
+                                <!-- <th>Assigned To</th> -->
+                                <!-- <th>Estimate</th> -->
+                                <!-- <th>Time Spent</th> -->
+                                <th class="text-center">View</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let project of projects; let i=index" (click)="navigateToTaskComponent(project)"
-                                class="">
-                                <td>{{ i+1}}</td>
-                                <td>{{ project.title }}</td>
+                            <tr *ngFor="let project of projects; let i=index">
+                                <!-- <td>{{ i+1}}</td> -->
+                                <td [title]="project.title">{{ project.title }}</td>
                                 <td>{{ project.createdBy }}</td>
                                 <td>{{ project.projectManager }}</td>
-                                <td>{{ project.startDate }}</td>
-                                <td>{{ project.endDate }}</td>
-                                <td>{{ project.teamMembers }}</td>
-                                <td>{{ project.dueDate }}</td>
+                                <td>{{ project.startDate | date:'dd-MM-yyyy' }}</td>
+                                <!-- <td>{{ project.endDate | date:'dd-MM-yyyy' }}</td> -->
+                                <td>{{ project.dueDate + " Days" }}</td>
+                                <td>{{ project.teamMembers.length }}</td>
                                 <td>{{ project.status }}</td>
-                                <td>{{ project.assignedTo }}</td>
-                                <td>{{ project.estimate }}</td>
-                                <td>{{ project.timeSpent }}</td>
+                                <!-- <td>{{ project.assignedTo }}</td> -->
+                                <!-- <td>{{ project.estimate }}</td> -->
+                                <!-- <td>{{ project.timeSpent }}</td> -->
+                                <td class="text-center" (click)="navigateToTaskComponent(project)"><i
+                                        class="bi bi-eye"></i></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
+                <div class="d-flex justify-content-between align-items-center pb-1">
+                    <!-- Items Per Page Dropdown -->
+                    <div class="d-flex align-items-center">
+                        <!-- <label for="itemsPerPage" class="me-2 fs-6">Show</label> -->
+                        <select id="itemsPerPage" class="form-select fs-6 " style="min-width: 20px;">
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
+                        </select>
+                    </div>
+
+
+
+                    <div class="d-flex align-items-center justify-content-between">
+                        <!-- Page information -->
+                        <span class="text-muted">Page 1 of 1</span>
+
+                        <!-- Items count -->
+                        <span class="text-muted">(1 item)</span>
+
+                        <!-- Pagination buttons -->
+                        <div class="d-flex align-items-center">
+                            <button class="btn  btn-sm px-2" type="button"><i class="bi bi-chevron-left"></i></button>
+                            <button class="btn  btn-sm px-2" type="button">1</button>
+                            <span class="mx-2">of 2</span>
+                            <button class="btn  btn-sm px-2" type="button"><i class="bi bi-chevron-right"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </div>
 
     <!-- Footer -->
-    <footer class="footer py-3" style="background-color: whitesmoke;">
+    <footer class="footer py-2" style="background-color: whitesmoke;">
         <div class="container text-center">
             <span class="text-muted">Task Management System</span>
         </div>
